<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 Marcel Walch, Florian Schaub
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
  http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>

    <!-- MainActivity Strings -->
    <string name="app_name">Graphical Passwords</string>
    <string name="intro">This app contains several graphical password schemes. It is meant to enable users to explore the usability of different approaches in this field.</string>
    <string name="intro_attention">Passwords are stored in plain text!</string>
    <string name="action_settings">Settings</string>

    <!-- general-purpose Strings -->
    <string name="btn_create_password">Create password</string>
    <string name="btn_enter_password">Enter password</string>
    <string name="btn_ok">OK</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_done">Done</string>
    <string name="btn_clearall">Clear all</string>
    <string name="btn_undo">Undo</string>
    <string name="msg_pw_correct">Password correct!</string>
    <string name="msg_pw_wrong">Wrong password!</string>
    <string name="label_input">Input:</string>
    <string name="label_round">Round</string>

    <!-- Open MIBA Strings -->
    <string name="title_activity_miba">Open MIBA</string>
    <string name="title_activity_miba_create_password">Open MIBA: Create Password</string>
    <string name="title_activity_miba_login">Open MIBA: Enter Password</string>
    <string name="title_dialog_miba_createpw">Select gestures</string>
    <string name="msg_dialog_miba_createpw">Please select your multitouch gestures. One gesture can contain up to four rectangles. You can insert a shift round with a long touch.\nYour password has to contain %d rounds.</string>
    <string name="title_dialog_miba_rememberpw">Please memorize your gestures:</string>
    
    <!-- Open Pass-Go Strings -->
    <string name="title_activity_pass_go">Open Pass-Go</string>
    <string name="title_activity_pass_go_create_password">Open Pass-Go: Create Password</string>
    <string name="title_activity_pass_go_login">Open Pass-Go: Enter Password</string>
    <string name="title_dialog_pass_go_createpw">Select pattern</string>
    <string name="msg_dialog_pass_go_createpw">Please draw your desired pattern in the designated grid.\nYour pattern has to contain %d line segments and / or dots.</string>
    <string name="msg_dialog_pass_go_deletepattern">Would you really like to delete the pattern?</string>
    <string name="title_dialog_pass_go_rememberpw">Please memorize the pattern:</string>

    <!-- Open TAPI Strings -->
    <string name="title_activity_tapi">Open TAPI</string>
    <string name="title_activity_tapi_create_password">Open TAPI: Create Password</string>
    <string name="title_activity_tapi_login">Open TAPI: Enter Password</string>
    <string name="title_dialog_tapi_createpw">Select pass-images</string>
    <string name="msg_dialog_tapi_createpw">Please choose your pass-images.\nYour password must contain %d pass-images.</string>
    <string name="title_dialog_tapi_rememberpw">Please memorize the sequence of pass-images:</string>

    <!-- Open UYI Strings -->
    <string name="title_activity_uyicreate_password">Open UYI: Create Password</string>
    <string name="title_activity_uyilogin">Open UYI: Enter Password</string>
    <string name="title_activity_uyi">Open UYI</string>
    <string name="title_dialog_uyi_createpw">Select pass-images</string>
    <string name="msg_dialog_uyi_createpw">Please choose your pass-images from the gallery.\nYour password must contain %d pass-images.</string>
    <string name="msg_dialog_uyi_deleteimage">Would you really like to remove the pass-image?</string>
    <string name="title_dialog_uyi_rememberpw">Please memorize the set of pass-images:</string>

    <!-- Papers -->
    <string name="paper_check_out">Check out our paper:</string>
    <string name="paper_references">This implementation is based on:</string>
    <string name="paper_pass_go">H. Tao and C. Adams. Pass-Go: A Proposal to Improve the Usability of Graphical Passwords. <i>Int. J. Network Security</i>, 7(2):273–292, 2008.</string>
    <string name="paper_tapi">J. Citty and D. R. Hutchings. TAPI: touch&#8211;screen authentication using partitioned images. Tech. Report 2010&#8211;1, Elon University, 2010.</string>
    <string name="paper_uyi">E. Hayashi, R. Dhamija, N. Christin, and A. Perrig. Use Your Illusion: secure authentication usable anywhere. In <i>Proc. SOUPS \'08</i>. ACM, 2008.</string>
    <string name="paper_miba">D. Ritter, F. Schaub, M. Walch, and M. Weber. MIBA: Multitouch image-based authentication on smartphones. In <i>Proc. CHI \'13 Extended Abstracts</i>. ACM, 2013.</string>
    <string name="paper_exploring_designspace">F. Schaub, M. Walch, B. Könings, and M. Weber. Exploring the design space of graphical passwords on smartphones. In <i>Proc. SOUPS \'13</i>. ACM, 2013.</string>

</resources>
