<!--
  Copyright 2013 Marcel Walch, Florian Schaub
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
  http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MIBACreatePasswordActivity" >

    <TextView
        android:id="@+id/tvRound"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#c8b7b7b7"
        android:gravity="top|center"
        android:paddingLeft="10dip"
        android:paddingTop="5dip"
        android:text="@string/label_round"
        android:textColor="#FF000000" >
    </TextView>

    <LinearLayout
        android:id="@+id/buttonBar"
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/miba_btnBack"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:drawableLeft="@android:drawable/ic_menu_revert"
            android:text="@string/btn_undo" />

        <Button
            android:id="@+id/miba_btnCreateMasterKey"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:drawableLeft="@drawable/ic_menu_login"
            android:enabled="false"
            android:text="@string/btn_done" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/buttonBar"
        android:layout_below="@id/tvRound"
        android:orientation="vertical" >

        <TableRow
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:padding="10dip" >

            <LinearLayout
                android:id="@+id/square1"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="5dip"
                android:layout_weight="0.5"
                android:background="#FFFF00"
                android:orientation="vertical"
                android:paddingRight="5dip" />

            <LinearLayout
                android:id="@+id/square2"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dip"
                android:layout_weight="0.5"
                android:background="#FF00FF"
                android:orientation="vertical"
                android:padding="10dp" />
        </TableRow>

        <TableRow
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center_horizontal"
            android:paddingBottom="10dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" >

            <LinearLayout
                android:id="@+id/square3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dip"
                android:layout_weight="0.5"
                android:background="#00FFFF"
                android:orientation="vertical"
                android:padding="10dp" />

            <LinearLayout
                android:id="@+id/square4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dip"
                android:layout_weight="0.5"
                android:background="#eeeeee"
                android:orientation="vertical"
                android:padding="10dp" />
        </TableRow>

        <TableRow
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center_horizontal"
            android:paddingBottom="10dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" >

            <LinearLayout
                android:id="@+id/square5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dip"
                android:layout_weight="0.5"
                android:background="#fb0000"
                android:orientation="vertical"
                android:padding="10dp" />

            <LinearLayout
                android:id="@+id/square6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dip"
                android:layout_weight="0.5"
                android:background="#2c6bf9"
                android:orientation="vertical"
                android:padding="10dp" />
        </TableRow>

        <TableRow
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center_horizontal"
            android:paddingBottom="10dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" >

            <LinearLayout
                android:id="@+id/square7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dip"
                android:layout_weight="0.5"
                android:background="#07f712"
                android:orientation="vertical"
                android:padding="10dp" />

            <LinearLayout
                android:id="@+id/square8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dip"
                android:layout_weight="0.5"
                android:background="#ff8400"
                android:orientation="vertical"
                android:padding="10dp" />
        </TableRow>
    </TableLayout>

</RelativeLayout>